--- a/notebooks/break_combine.ipynb
+++ b/notebooks/break_combine.ipynb
@@ -145,7 +145,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2138e240ee0>"
+       "<graphviz.graphs.Digraph at 0x29aff225640>"
       ]
      },
      "execution_count": 7,
@@ -255,7 +255,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x213ae6d6230>"
+       "<graphviz.graphs.Digraph at 0x29aff342c30>"
       ]
      },
      "execution_count": 9,
@@ -312,7 +312,7 @@
        "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
        " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
        "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
-       " Tree(vars=[1, -1, -1, -2], thresholds=[0.3320334443791348, nan, nan, nan], leaf_vals=[nan nan nan nan], n_vals=[100  43  57  -2])]"
+       " Tree(vars=[ 1 -1 -1 -2], thresholds=[0.33203344        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  43  57  -2])]"
       ]
      },
      "execution_count": 11,
@@ -383,7 +383,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x213ae6d6380>"
+       "<graphviz.graphs.Digraph at 0x29aafedecc0>"
       ]
      },
      "execution_count": 12,
@@ -454,7 +454,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x213ae6d5ba0>"
+       "<graphviz.graphs.Digraph at 0x29aff343440>"
       ]
      },
      "execution_count": 13,
@@ -546,7 +546,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x213ae6d6740>"
+       "<graphviz.graphs.Digraph at 0x29aff343830>"
       ]
      },
      "execution_count": 15,
@@ -592,25 +592,8 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2\n",
-       "  -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2\n",
-       "  -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan 0.25379451        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan        nan        nan\n",
-       "         nan        nan        nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-       "  nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-       "  nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-       "  nan nan nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   8  15  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2\n",
-       "   -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2\n",
-       "   -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2  -2\n",
-       "   -2  -2  -2  -2  -2  -2  -2  -2  -2  -2])]"
+       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.25379451        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   8  15  -2])]"
       ]
      },
      "execution_count": 17,
@@ -709,7 +692,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x213ae6d6290>"
+       "<graphviz.graphs.Digraph at 0x29aff3436e0>"
       ]
      },
      "execution_count": 18,
@@ -740,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -754,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
