--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:05<00:00, 51.27it/s] \n"
+      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.72it/s] \n"
      ]
     }
    ],
@@ -64,12 +64,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from pympler import asizeof\n",
+    "# \n",
+    "# print(asizeof.asizeof(bart.trace[-2].trees) - asizeof.asizeof(bart.trace[-2].trees[0].dataX))\n",
+    "# print(asizeof.asizeof(bart.trace[-2].trees[0]) - asizeof.asizeof(bart.trace[-2].trees[0].dataX))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].trees))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].cache))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].trees[0]))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].trees[0].evals))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].trees[0].node_indicators))\n",
+    "# print(asizeof.asizeof(bart.trace[-1].trees[0].n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:11<00:00, 43.39it/s]"
+      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 61.31it/s]"
      ]
     },
     {
@@ -97,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,10 +227,10 @@
        "{'bart': 0.022375086326237227,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02328283761397566}"
+       " 'btz': 0.02328283631252247}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +281,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
