Compare logarithms to avoid potential overflow
& rename profile.png to profile_bcf.png

--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -73,17 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 55.26it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bcf = BCF(\n",
     "    n_treat_arms=z.shape[1],  # Number of treatment arms\n",
@@ -97,21 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 2/2 [00:03<00:00,  1.91s/it]\n"
+      "Iterations: 100%|██████████| 2/2 [00:00<00:00, 32.85it/s]\n"
      ]
     }
    ],
@@ -125,14 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 36.41it/s]"
+      "Iterations:   0%|          | 0/200 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:07<00:00, 25.20it/s]"
      ]
     },
     {
@@ -140,7 +132,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file 'profile.prof'.\n"
+      "*** Profile stats marshalled to file 'profile_bcf.prof'.\n"
      ]
     },
     {
@@ -152,22 +144,22 @@
     }
    ],
    "source": [
-    "%prun -s cumtime -D profile.prof -q bcf.fit(X_train, y_train, z_train)"
+    "%prun -s cumtime -D profile_bcf.prof -q bcf.fit(X_train, y_train, z_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gprof2dot -f pstats profile.prof -o profile.dot\n",
-    "!dot -Tpng profile.dot -o profile.png"
+    "!gprof2dot -f pstats profile_bcf.prof -o profile_bcf.dot\n",
+    "!dot -Tpng profile_bcf.dot -o profile_bcf.png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +344,7 @@
        " 'dt': 0.03223509459291045}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
