--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.72it/s] \n"
+      "Iterations: 100%|██████████| 300/300 [00:14<00:00, 20.87it/s]\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 61.31it/s]"
+      "Iterations: 100%|██████████| 500/500 [00:18<00:00, 26.80it/s]"
      ]
     },
     {
@@ -124,10 +124,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 1 1 1 2 1 1 1 2 0 1 2 2 1 2 1 3 1 1 0 2 1 1 1 1 1 1 1 1 1 4 1 1 1\n",
-      " 1 1 1 3 1 1 1 1 2 1 1 2 2 1 1 1 1 1 1 1 1 2 2 1 3 1 1 0 4 1 1 1 0 1 1 1 1\n",
-      " 1 1 1 1 1 1 2 1 1 2 1 1 1 1 2 1 3 1 2 1 1 0 1 1 1 1]\n",
-      "(array([19, 33, 40, 61, 65, 90], dtype=int64),)\n"
+      "[1 2 1 2 1 0 2 3 1 1 1 2 1 1 1 2 0 0 2 2 1 2 2 2 2 1 1 3 3 1 1 1 2 1 1 1 3\n",
+      " 1 4 4 2 2 2 3 1 2 0 3 1 1 1 2 1 1 2 2 1 2 4 1 2 1 2 4 2 1 1 2 1 1 1 1 1 0\n",
+      " 3 1 2 2 4 1 3 2 1 1 1 1 1 5 1 1 1 3 1 0 3 2 1 1 2 1]\n",
+      "(array([ 7, 27, 28, 36, 38, 39, 43, 47, 58, 63, 74, 78, 80, 87, 91, 94],\n",
+      "      dtype=int64),)\n"
      ]
     }
    ],
@@ -148,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00740722])}\n"
+      "{'eps_sigma2': array([0.00564064])}\n"
      ]
     }
    ],
@@ -165,18 +166,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.049 (split, n = 120)\n",
-      "\tVal: -0.014 (leaf, n = 6)\n",
-      "\tX_0 <= 0.247 (split, n = 114)\n",
-      "\t\tVal: 0.028 (leaf, n = 29)\n",
-      "\t\tX_1 <= 0.455 (split, n = 85)\n",
-      "\t\t\tVal: 0.038 (leaf, n = 37)\n",
-      "\t\t\tVal: -0.038 (leaf, n = 48)\n",
-      "[ 0 -1  0 -2 -2 -1  1 -2 -2 -2 -2 -2 -2 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2\n",
+      "X_0 <= 0.318 (split, n = 120)\n",
+      "\tVal: -0.017 (leaf, n = 45)\n",
+      "\tVal: -0.001 (leaf, n = 75)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2\n",
       " -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.01361766         nan         nan         nan  0.02776888\n",
+      "[        nan -0.0169546  -0.00132394         nan         nan         nan\n",
       "         nan         nan         nan         nan         nan         nan\n",
-      "         nan  0.03843378 -0.03766617         nan         nan         nan\n",
+      "         nan         nan         nan         nan         nan         nan\n",
       "         nan         nan         nan         nan         nan         nan\n",
       "         nan         nan         nan         nan         nan         nan\n",
       "         nan         nan]\n"
@@ -226,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022375086326237227,\n",
+       "{'bart': 0.02295469515464727,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283631252247}"
@@ -260,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.39415156  0.28469554  0.36146022  0.37815067  0.33273601  0.38164505\n",
-      " -0.34399068  0.38194264 -0.13325786  0.12870074  0.34503752  0.27274111]\n",
+      "[ 0.28642207  0.35428549  0.31771414  0.36539222  0.40073081  0.36794919\n",
+      " -0.35010413  0.39542453 -0.10834898  0.04257399  0.14588958  0.32570837]\n",
       "[ 0.34923863  0.42552948  0.17644883  0.38525745  0.35193784  0.46601776\n",
       " -0.49488025  0.4582753   0.0037892   0.14973307  0.30298339  0.25992003]\n"
      ]
@@ -336,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "btpg",
    "language": "python",
    "name": "python3"
   },
@@ -350,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
