--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -333,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "btpg",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
