Add propensity score support for MBCF.
Also rename BCFDataset.z to Z, because Z is a matrix in the multi-arm scenario.

--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 2/2 [00:00<00:00, 32.85it/s]\n"
+      "Iterations: 100%|██████████| 2/2 [00:03<00:00,  1.88s/it]\n"
      ]
     }
    ],
@@ -105,26 +105,19 @@
     "bcf2 = BCF(\n",
     "    n_treat_arms=z.shape[1], n_mu_trees=100, n_tau_trees=[50, 50], ndpost=1, nskip=1, random_state=42\n",
     ")\n",
-    "bcf2.fit(X_train, y_train, z_train)"
+    "bcf2.fit(X_train, y_train, z_train, ps = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/200 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 200/200 [00:07<00:00, 25.20it/s]"
+      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 33.00it/s]\n"
      ]
     },
     {
@@ -134,13 +127,6 @@
       " \n",
       "*** Profile stats marshalled to file 'profile_bcf.prof'.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -149,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,22 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.441 (split, n = 480)\n",
-      "\tX_1 <= 0.416 (split, n = 221)\n",
-      "\t\tVal: -0.038 (leaf, n = 90)\n",
-      "\t\tVal: -0.009 (leaf, n = 131)\n",
-      "\tVal: 0.014 (leaf, n = 259)\n",
-      "[ 0  1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[        nan         nan  0.0139598  -0.03781563 -0.00940739         nan\n",
-      "         nan         nan         nan         nan         nan         nan\n",
-      "         nan         nan         nan         nan]\n"
+      "X_2 <= 0.563 (split, n = 480)\n",
+      "\tVal: 0.000 (leaf, n = 336)\n",
+      "\tVal: 0.004 (leaf, n = 144)\n",
+      "[ 2 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[       nan 0.00033573 0.00425373        nan        nan        nan\n",
+      "        nan        nan]\n"
      ]
     }
    ],
@@ -183,15 +166,12 @@
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
-    "print(tree_sp.leaf_vals)\n",
-    "# print(bcf.sampler.trace[-1].evaluate(z = np.zeros_like(y_train, dtype = bool), X = X_train)[0:10])\n",
-    "\n",
-    "np.testing.assert_allclose(bcf.sampler.trace[-1].evaluate(z_train), bcf.sampler.trace[-1].evaluate(z_train, X_train))"
+    "print(tree_sp.leaf_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,25 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.18912502  0.1735647  -0.01754936  0.15050377  0.01464981  0.19353664\n",
-      "  0.18154303  0.16566044  0.17730278 -0.00757243]\n",
-      "[[ 0.20732212 -0.17476558]\n",
-      " [ 0.20647187 -0.18653574]\n",
-      " [ 0.21389026 -0.19276108]\n",
-      " [ 0.26435612 -0.18038378]\n",
-      " [ 0.25933444 -0.18163852]\n",
-      " [ 0.20825599 -0.19500159]\n",
-      " [ 0.20737898 -0.18777154]\n",
-      " [ 0.2571358  -0.17876338]\n",
-      " [ 0.2078754  -0.1760631 ]\n",
-      " [ 0.26130818 -0.18408952]]\n"
+      "[ 0.1610919   0.15502469 -0.02513103  0.19560356 -0.0180001   0.16599144\n",
+      "  0.16963446  0.19157486  0.14897462 -0.00616356]\n",
+      "[[ 0.21043    -0.18655092]\n",
+      " [ 0.21039799 -0.1943663 ]\n",
+      " [ 0.22211409 -0.19810202]\n",
+      " [ 0.21228725 -0.19436819]\n",
+      " [ 0.20994748 -0.19439678]\n",
+      " [ 0.21057743 -0.19571759]\n",
+      " [ 0.21025034 -0.18745934]\n",
+      " [ 0.21120382 -0.19546122]\n",
+      " [ 0.21009583 -0.19184321]\n",
+      " [ 0.20897425 -0.1953831 ]]\n"
      ]
     }
    ],
@@ -229,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,19 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bcf': 0.0234999515646783,\n",
+       "{'bcf': 0.019123583481006297,\n",
        " 'rf': 0.021441280609918477,\n",
        " 'lr': 0.05466893346335514,\n",
        " 'dt': 0.03223509459291045}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,23 +338,6 @@
     "for model_name, model in models.items():\n",
     "    results[model_name] = mean_squared_error(y_test, model.predict(X_test, z_test))\n",
     "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0234999515646783\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mean_squared_error(bcf_result[2], y_test))"
    ]
   }
  ],
