--- a/notebooks/break_combine.ipynb
+++ b/notebooks/break_combine.ipynb
@@ -13,7 +13,7 @@
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "\n",
     "from bart_playground import Tree, Parameters\n",
-    "from bart_playground import Break, Combine, Grow\n",
+    "from bart_playground import Break, Combine, Grow, Birth, Death\n",
     "from bart_playground import Dataset\n",
     "from bart_playground import visualize_tree \n",
     "from bart_playground import *  # Import the updated DataGenerator class"
@@ -62,7 +62,7 @@
    "source": [
     "tree1 = Tree.new(dataX=X)\n",
     "trees = [tree1]\n",
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
     "params.trees"
    ]
   },
@@ -145,7 +145,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aff225640>"
+       "<graphviz.graphs.Digraph at 0x2686c0ee4b0>"
       ]
      },
      "execution_count": 7,
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
     "move = Grow(params, trees_changed=[0], possible_thresholds=possible_thresholds)\n",
     "move.propose(rng)\n",
     "tree_gg = move.proposed.trees[0]"
@@ -255,7 +255,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aff342c30>"
+       "<graphviz.graphs.Digraph at 0x2686c352870>"
       ]
      },
      "execution_count": 9,
@@ -289,7 +289,7 @@
    ],
    "source": [
     "trees = [tree_gg,tree_g]\n",
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
     "params.trees"
    ]
   },
@@ -308,8 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
+       "[Tree(vars=[ 0 -1 -1 -2], thresholds=[0.76202731        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  77  -2  -2]),\n",
        " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
        "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
        " Tree(vars=[ 1 -1 -1 -2], thresholds=[0.33203344        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  43  57  -2])]"
@@ -383,7 +382,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aafedecc0>"
+       "<graphviz.graphs.Digraph at 0x2686c35a090>"
       ]
      },
      "execution_count": 12,
@@ -454,7 +453,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aff343440>"
+       "<graphviz.graphs.Digraph at 0x2686c3530b0>"
       ]
      },
      "execution_count": 13,
@@ -483,7 +482,7 @@
    "source": [
     "rng = np.random.default_rng(24)\n",
     "trees = [tree1]\n",
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
     "move = Grow(params, trees_changed=[0], possible_thresholds=possible_thresholds)\n",
     "move.propose(rng)\n",
     "tree_g_2 = move.proposed.trees[0]"
@@ -546,7 +545,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aff343830>"
+       "<graphviz.graphs.Digraph at 0x2686c36a0c0>"
       ]
      },
      "execution_count": 15,
@@ -580,7 +579,7 @@
    ],
    "source": [
     "trees = [tree_g,tree_g_2]\n",
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
     "params.trees"
    ]
   },
@@ -692,7 +691,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29aff3436e0>"
+       "<graphviz.graphs.Digraph at 0x2686c353200>"
       ]
      },
      "execution_count": 18,
@@ -719,11 +718,95 @@
     "tearDown(filename_gg)\n",
     "tearDown(filename_g2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Birth & Death"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
+       " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trees = [tree_gg,tree_g]\n",
+    "params = Parameters(trees, {\"eps_sigma2\": 1})\n",
+    "params.trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Tree(vars=[-1 -2 -2 -2 -2 -2 -2 -2], thresholds=[nan nan nan nan nan nan nan nan], leaf_vals=[ 0. nan nan nan nan nan nan nan], n_vals=[100  -2  -2  -2  -2  -2  -2  -2]),\n",
+       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
+       " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "move = Birth(params, trees_changed=[0])\n",
+    "move.propose(rng)\n",
+    "move.proposed.trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
+       " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = move.proposed\n",
+    "move = Death(params, trees_changed=[0])\n",
+    "move.propose(rng)\n",
+    "move.proposed.trees"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
