--- a/notebooks/special_moves.ipynb
+++ b/notebooks/special_moves.ipynb
@@ -145,7 +145,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c0ee4b0>"
+       "<graphviz.graphs.Digraph at 0x29183474eb0>"
       ]
      },
      "execution_count": 7,
@@ -255,7 +255,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c352870>"
+       "<graphviz.graphs.Digraph at 0x29183559db0>"
       ]
      },
      "execution_count": 9,
@@ -382,7 +382,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c35a090>"
+       "<graphviz.graphs.Digraph at 0x291dfcf9f00>"
       ]
      },
      "execution_count": 12,
@@ -453,7 +453,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c3530b0>"
+       "<graphviz.graphs.Digraph at 0x291dfcfba90>"
       ]
      },
      "execution_count": 13,
@@ -545,7 +545,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c36a0c0>"
+       "<graphviz.graphs.Digraph at 0x291835db9a0>"
       ]
      },
      "execution_count": 15,
@@ -691,7 +691,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2686c353200>"
+       "<graphviz.graphs.Digraph at 0x29183a77760>"
       ]
      },
      "execution_count": 18,
@@ -759,11 +759,11 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[-1 -2 -2 -2 -2 -2 -2 -2], thresholds=[nan nan nan nan nan nan nan nan], leaf_vals=[ 0. nan nan nan nan nan nan nan], n_vals=[100  -2  -2  -2  -2  -2  -2  -2]),\n",
-       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
+       "[Tree(vars=[-1 -2], thresholds=[nan nan], leaf_vals=[nan nan], n_vals=[-2 -2]),\n",
        " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
+       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2])]"
       ]
      },
      "execution_count": 21,
@@ -785,10 +785,10 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
-       " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
+       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2])]"
       ]
      },
      "execution_count": 22,
@@ -798,7 +798,7 @@
    ],
    "source": [
     "params = move.proposed\n",
-    "move = Death(params, trees_changed=[0])\n",
+    "move = Death(params, trees_changed=[2, 0])\n",
     "move.propose(rng)\n",
     "move.proposed.trees"
    ]
@@ -806,7 +806,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -820,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
