Reduce bandit memory usage
By deleting cached BCFAgent internal data and BCF trace. Also fix an issue in test_bcf_incremental.ipynb.

--- a/notebooks/test_bcf_incremental.ipynb
+++ b/notebooks/test_bcf_incremental.ipynb
@@ -41,15 +41,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial training set size: 20\n",
-      "Incremental data set size: 380\n",
+      "Initial training set size: 40\n",
+      "Incremental data set size: 360\n",
       "Test set size: 100\n",
       "\n",
       "Sample initial training data:\n",
-      "X: [[0.14617324 0.82466419]\n",
-      " [0.53606804 0.51422287]\n",
-      " [0.65292213 0.95534943]]\n",
-      "y: [0.54945567 0.53520345 0.52929338]\n",
+      "X: [[0.08449322 0.93593982]\n",
+      " [0.75851953 0.71946296]\n",
+      " [0.36181261 0.08764992]]\n",
+      "y: [ 0.50617046  0.46355617 -0.10210452]\n",
       "z: [[False False]\n",
       " [False False]\n",
       " [False False]]\n"
@@ -76,8 +76,8 @@
     "y = y + z[:, 0] * 0.5 - z[:, 1] * 0.5\n",
     "\n",
     "# Split into initial training, incremental and test sets\n",
-    "X_init, X_temp, y_init, y_temp, z_init, z_temp = train_test_split(X, y, z, test_size=0.96, random_state=42)\n",
-    "X_inc, X_test, y_inc, y_test, z_inc, z_test = train_test_split(X_temp, y_temp, z_temp, test_size=20/96, random_state=42)\n",
+    "X_init, X_temp, y_init, y_temp, z_init, z_temp = train_test_split(X, y, z, test_size=0.92, random_state=42)\n",
+    "X_inc, X_test, y_inc, y_test, z_inc, z_test = train_test_split(X_temp, y_temp, z_temp, test_size=20/92, random_state=42)\n",
     "\n",
     "print(f\"Initial training set size: {X_init.shape[0]}\")\n",
     "print(f\"Incremental data set size: {X_inc.shape[0]}\")\n",
@@ -107,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 28.98it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:13<00:00, 15.01it/s]\n"
      ]
     }
    ],
@@ -142,10 +142,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 61.55it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 56.88it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 61.47it/s]\n",
-      "100%|██████████| 380/380 [00:11<00:00, 31.84it/s]\n"
+      "Iterations:   0%|          | 0/200 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 39.01it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 35.08it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 39.60it/s]\n",
+      "100%|██████████| 360/360 [00:13<00:00, 26.13it/s]\n"
      ]
     }
    ],
@@ -201,14 +208,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "before_update_preds = bcf.predict(X_test, z_test)\n",
+    "before_update_mse = mean_squared_error(y_test, before_update_preds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE before any updates: 0.060028\n",
-      "MSE after batch update: 0.025059\n",
-      "MSE after incremental updates: 0.025569\n"
+      "MSE before any updates: 0.049678\n",
+      "MSE after batch update: 0.028571\n",
+      "MSE after incremental updates: 0.030640\n"
      ]
     }
    ],
@@ -236,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -244,23 +261,19 @@
      "output_type": "stream",
      "text": [
       "Sample mu tree before updates:\n",
-      "X_3 <= 0.150 (split, n = 20)\n",
-      "\tVal: -0.026 (leaf, n = 11)\n",
-      "\tVal: -0.022 (leaf, n = 9)\n",
+      "X_1 <= 0.926 (split, n = -2)\n",
+      "\tVal: -0.014 (leaf, n = 37)\n",
+      "\tVal: 0.036 (leaf, n = -2)\n",
       "\n",
       "Sample mu tree after batch update:\n",
-      "X_3 <= 0.229 (split, n = 400)\n",
-      "\tX_0 <= 0.205 (split, n = 328)\n",
-      "\t\tVal: 0.026 (leaf, n = 60)\n",
-      "\t\tVal: -0.009 (leaf, n = 268)\n",
-      "\tX_2 <= 0.400 (split, n = 72)\n",
-      "\t\tVal: -0.040 (leaf, n = 65)\n",
-      "\t\tVal: 0.045 (leaf, n = 7)\n",
+      "X_1 <= 0.597 (split, n = -2)\n",
+      "\tVal: -0.023 (leaf, n = -2)\n",
+      "\tVal: 0.005 (leaf, n = -2)\n",
       "\n",
       "Sample mu tree after incremental updates:\n",
-      "X_3 <= 0.148 (split, n = 21)\n",
-      "\tVal: -0.032 (leaf, n = 267)\n",
-      "\tVal: 0.014 (leaf, n = 133)\n"
+      "X_2 <= 0.395 (split, n = -2)\n",
+      "\tVal: -0.017 (leaf, n = 122)\n",
+      "\tVal: -0.014 (leaf, n = 278)\n"
      ]
     }
    ],
@@ -286,21 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:03<00:00, 54.16it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:05<00:00, 36.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE with model fit on all data at once: 0.021381\n"
+      "MSE with model fit on all data at once: 0.015584\n"
      ]
     }
    ],
@@ -337,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial training only: 0.060028\n",
-      "Batch update: 0.025059\n",
-      "Incremental updates: 0.025569\n",
-      "Full data from scratch: 0.021381\n"
+      "Initial training only: 0.049678\n",
+      "Batch update: 0.028571\n",
+      "Incremental updates: 0.030640\n",
+      "Full data from scratch: 0.015584\n"
      ]
     }
    ],
