--- a/notebooks/test_bcf_multi.ipynb
+++ b/notebooks/test_bcf_multi.ipynb
@@ -96,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 2/2 [00:03<00:00,  1.88s/it]\n"
+      "Iterations: 100%|██████████| 2/2 [00:07<00:00,  3.72s/it]\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:06<00:00, 33.00it/s]\n"
+      "Iterations: 100%|██████████| 200/200 [00:20<00:00,  9.61it/s]\n"
      ]
     },
     {
@@ -145,19 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_2 <= 0.563 (split, n = 480)\n",
-      "\tVal: 0.000 (leaf, n = 336)\n",
+      "X_2 <= 0.563 (split, n = -2)\n",
+      "\tVal: 0.000 (leaf, n = -2)\n",
       "\tVal: 0.004 (leaf, n = 144)\n",
-      "[ 2 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[       nan 0.00033573 0.00425373        nan        nan        nan\n",
-      "        nan        nan]\n"
+      "[ 2 -1 -1 -2]\n",
+      "[       nan 0.00033573 0.00425373        nan]\n"
      ]
     }
    ],
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bcf': 0.019123583481006297,\n",
+       "{'bcf': 0.019123583481006283,\n",
        " 'rf': 0.021441280609918477,\n",
        " 'lr': 0.05466893346335514,\n",
        " 'dt': 0.03223509459291045}"
