--- a/notebooks/bandit/compare_agents_notebook.ipynb
+++ b/notebooks/bandit/compare_agents_notebook.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "\n",
     "cores = multiprocessing.cpu_count()\n",
     "\n",
-    "n_simulations = 1  # Number of simulations per scenario\n",
+    "n_simulations = 4  # Number of simulations per scenario\n",
     "n_draws = 200      # Number of draws per simulation\n",
     "\n",
     "def call_func():\n",
@@ -84,122 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Evaluating Offset scenario...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Simulating: 100%|██████████| 200/200 [01:25<00:00,  2.35it/s]]\n",
-      "Simulating sequentially: 100%|██████████| 1/1 [01:25<00:00, 85.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: c:\\users\\drizz\\documents\\github\\bart_playground\\bart_playground\\bandit\\bcf_agent.py\n",
-      "\n",
-      "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
-      "=============================================================\n",
-      "   137    338.8 MiB    221.7 MiB         200       def update_state(self, arm: int, x: Union[np.ndarray, List[float]], \n",
-      "   138                                                              y: Union[float, np.ndarray]) -> \"BCFAgent\":\n",
-      "   139                                                 \"\"\"\n",
-      "   140                                                 Update the agent's state with new observation data, optionally batching updates.\n",
-      "   141                                                 \n",
-      "   142                                                 Parameters:\n",
-      "   143                                                     arm (int): The index of the arm chosen, 0 for the control\n",
-      "   144                                                     x (array-like): Feature vector\n",
-      "   145                                                     y (float): Observed reward\n",
-      "   146                                                     \n",
-      "   147                                                 Returns:\n",
-      "   148                                                     self: Updated instance\n",
-      "   149                                                 \"\"\"\n",
-      "   150                                                 # Convert inputs to the right shapes\n",
-      "   151    338.8 MiB     -6.6 MiB         200           x = np.array(x).reshape(1, -1)\n",
-      "   152    338.8 MiB     -6.6 MiB         200           y = np.array(y).reshape(1)\n",
-      "   153                                                 \n",
-      "   154                                                 # Create treatment indicator (one-hot encoded)\n",
-      "   155    338.8 MiB     -6.6 MiB         200           z = np.zeros((1, self.n_treat_arms))\n",
-      "   156    338.8 MiB     -6.6 MiB         200           if arm > 0:\n",
-      "   157    338.8 MiB     -1.1 MiB          48               z[0, arm - 1] = 1\n",
-      "   158                                                 \n",
-      "   159                                                 # Append to our overall dataset\n",
-      "   160    338.8 MiB     -6.5 MiB         200           self.features = np.vstack([self.features, x])\n",
-      "   161    338.8 MiB     -6.5 MiB         200           self.outcomes = np.vstack([self.outcomes, y.reshape(-1, 1)])\n",
-      "   162    338.8 MiB     -6.5 MiB         200           self.treatments = np.vstack([self.treatments, z])\n",
-      "   163    338.8 MiB     -6.5 MiB         200           self.cnt += 1\n",
-      "   164                                                 \n",
-      "   165                                                 # Calculate current batch size\n",
-      "   166    338.8 MiB     -6.5 MiB         200           current_batch_size = self.features.shape[0] - self.batch_start_idx\n",
-      "   167                                                 \n",
-      "   168                                                 # Check if we have at least one sample for each treatment arm and one control sample\n",
-      "   169    338.8 MiB     -6.5 MiB         200           has_all_treatments = not np.any(np.sum(self.treatments, axis=0) == 0)  # All arms have samples\n",
-      "   170    338.8 MiB     -6.5 MiB         200           has_control = np.any(np.sum(self.treatments, axis=1) == 0)  # At least one control sample\n",
-      "   171                                                 \n",
-      "   172                                                 # We need enough samples overall and a complete batch\n",
-      "   173    338.8 MiB     -6.5 MiB         200           should_update = False\n",
-      "   174    338.8 MiB     -6.5 MiB         200           if has_all_treatments and has_control and self.cnt >= 20:\n",
-      "   175    228.3 MiB      0.0 MiB           1               if current_batch_size >= self.nbatch:\n",
-      "   176    228.3 MiB      0.0 MiB           1                   should_update = True\n",
-      "   177                                                         \n",
-      "   178    338.8 MiB     -6.5 MiB         200           if not should_update:\n",
-      "   179    338.8 MiB     -6.5 MiB         199               return self\n",
-      "   180                                                 \n",
-      "   181                                                 # Update the model\n",
-      "   182    228.3 MiB      0.0 MiB           1           if not self.is_model_fitted:\n",
-      "   183                                                     # Initial fit using all collected data\n",
-      "   184    338.7 MiB    110.4 MiB           2               self.model.fit(\n",
-      "   185    228.3 MiB      0.0 MiB           1                   X=self.features, \n",
-      "   186    228.3 MiB      0.0 MiB           1                   y=self.outcomes.flatten(), \n",
-      "   187    228.3 MiB      0.0 MiB           1                   Z=self.treatments,\n",
-      "   188    228.3 MiB      0.0 MiB           1                   quietly=True,\n",
-      "   189    228.3 MiB      0.0 MiB           1                   ps=self.ps_on\n",
-      "   190                                                     )\n",
-      "   191    338.7 MiB      0.0 MiB           1               self.is_model_fitted = True\n",
-      "   192                                                     \n",
-      "   193                                                     # Clear all data after initial fit since we don't need it anymore\n",
-      "   194    338.7 MiB      0.0 MiB           1               self._clear_internal_data()\n",
-      "   195                                                 else:\n",
-      "   196                                                     # For updates, all current data is batch data since we reset after each update\n",
-      "   197                                                     self.model.update_fit(\n",
-      "   198                                                         X=self.features, \n",
-      "   199                                                         y=self.outcomes.flatten(), \n",
-      "   200                                                         Z=self.treatments,\n",
-      "   201                                                         add_ndpost=self.nadd,\n",
-      "   202                                                         add_nskip=0,\n",
-      "   203                                                         quietly=True,\n",
-      "   204                                                         ps=self.ps_on\n",
-      "   205                                                     )\n",
-      "   206                                                     self._clear_internal_data()\n",
-      "   207                                                 \n",
-      "   208    338.7 MiB      0.0 MiB           1           return self"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bart_playground.samplers import Sampler\n",
     "from bart_playground.bandit.sim_util import simulate\n",
@@ -211,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,8 +113,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulating: 100%|██████████| 200/200 [00:27<00:00,  7.17it/s]]\n",
-      "Simulating sequentially: 100%|██████████| 1/1 [00:27<00:00, 27.92s/it]\n"
+      "Simulating: 100%|██████████| 200/200 [00:17<00:00, 11.21it/s]\n",
+      "Simulating: 100%|██████████| 200/200 [00:17<00:00, 11.12it/s]\n",
+      "Simulating: 100%|██████████| 200/200 [00:18<00:00, 10.96it/s]\n",
+      "Simulating: 100%|██████████| 200/200 [00:18<00:00, 10.78it/s]\n"
      ]
     }
    ],
@@ -343,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "btpg",
+   "display_name": "bartpg",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
